# privatellm

./: .coveragerc  .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/rr/: 1.txt  3.txt  4.txt  5.txt  6.txt  7.txt
data/rrr/: 10.txt  2.txt  8.txt  9.txt
data/ttt/: 11.txt  12.txt  13.txt  14.txt  15.txt
doc/: presentation.md
privatellm/: main.py
tests/: test_api_key.py  test_route_swagger_ui.py
