[tool.poetry]
name = "privatellm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
langchain  = "*"
openai = "*"
chromadb = "*"
llama-cpp-python = "^0.2.11"
gpt4all = "^1.0.12"
tiktoken = "^0.5.1"
pypdf = "^3.16.4"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^23.9.1"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"
format = "black:main"
