[tool.poetry]
name = "privatellm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
langchain  = "*"
openai = "*"
llama-cpp-python = "==0.2.11"
gpt4all = "^1.0.12"
tiktoken = "^0.5.1"
pypdf = "^3.16.4"
bs4 = "^0.0.1"
unstructured = "^0.10.24"
pgvector = "^0.2.3"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^23.9.1"
mypy = "^1.6.0"
pylint = "*"
types-beautifulsoup4 = "*"
types-requests = "*"
ruff = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"
format = "black:main"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
