[tool.poetry]
name = "privatellm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
langchain  = "*"
openai = "*"
llama-cpp-python = "==0.2.11"
gpt4all = "^1.0.12"
tiktoken = "^0.5.1"
pypdf = "^3.16.4"
bs4 = "^0.0.1"
unstructured = "^0.10.24"
pgvector = "^0.2.3"
psycopg2 = "^2.9.9"
opentelemetry-exporter-otlp-proto-grpc = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-requests = "*"
opentelemetry-instrumentation-psycopg2 = "*"
opentelemetry-instrumentation-logging = "*"
opentelemetry-instrumentation-httpx = "*"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
typeguard = "^2.13.3"
black = "^23.9.1"
mypy = "^1.6.0"
pylint = "*"
types-beautifulsoup4 = "*"
types-requests = "*"
ruff = "^0.1.2"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.poetry.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"
format = "black:main"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-self/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ (clashes with formatter)
    "EM101", # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102", # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "PD", # https://docs.astral.sh/ruff/rules/#pandas-vet-pd (false positives)
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S106", # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
    "S108", # https://docs.astral.sh/ruff/rules/hardcoded-temp-file/
    "ANN", # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PT009" # https://docs.astral.sh/ruff/rules/pytest-unittest-assertion/
]

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
